# MAI-at-UCSD-Inventory

./: README.md  pyproject.toml  render.yaml
backend/: .env.example  .env.local  .gitignore  =5.2.5  Dockerfile  main.py  manage.py  pyproject.toml  requirements.txt
backend/docker/: gunicorn_conf.py  nginx.conf
backend/inventory/: adapters.py  admin.py  context_processors.py  forms.py  forms_backup.py  forms_tags.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py  views_backup.py
backend/inventory/migrations/: 0001_initial.py  0002_add_gtin_to_item.py  0002_add_organization_stockitem.py  0002_alter_tag_options.py  0002_alter_user_options_user_unique_user_username_and_more.py  0002_category_unique_active_category_name_and_more.py  0002_delete_accesslog_delete_errorlog_delete_latencylog_and_more.py  0002_remove_item_unique_item_name_and_more.py  0003_alter_item_url.py  0003_make_location_required.py  0003_remove_item_quantity_active.py  0003_remove_stockitem_gtin_constraint.py  0003_remove_stockitem_is_active_field.py  0003_rename_audit_type_71e98b_idx_audit_type_990a2b_idx_and_more.py  0004_add_stockitem_location_and_item_name_constraint.py  0004_add_thumbnail_fields_to_image.py  0004_item_last_updated.py  0004_move_gtin_to_stockitem_add_detail.py  0005_add_stockitem_delete_permission.py  0005_alter_item_options.py  0005_alter_tag_options_remove_tag_sort_order.py  0006_alter_stockitem_options.py  0006_remove_item_unique_item_name_and_more.py  0007_add_location_model.py  0020_add_tag_system.py  (+16 more)
backend/mai/: asgi.py  settings.py  urls.py  wsgi.py
(+172 files in other folders)
