[project]
name = "maiv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap4>=2025.6",
    "django>=5.2.5",
    "django-crispy-forms>=2.4",
    "django-ulid>=0.0.4",
    "djangorestframework>=3.16.1",
    "ruff>=0.12.9",
]
