[project]
name = "maiv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "crispy-bootstrap4>=2025.6",
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-allauth[socialaccount]>=65.11.1",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "django-ulid>=0.0.4",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "ruff>=0.12.9",
    "whitenoise>=6.9.0",
]
